[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stepik-api-mcp"
version = "0.1.0"
description = "Stepik MCP Server — manage courses, sections, lessons, and steps via Stepik API"
requires-python = ">=3.12"
dependencies = ["mcp>=1.0.0"]

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["stepik_mcp_server.py"]

[project.scripts]
stepik-mcp = "stepik_mcp_server:mcp.run"
